--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
