--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "next-pwa": "^5.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
