Added PWA install prompt - QuantumShield is now installable!

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "QuantumGuard - AI Cyber Protection",
-  "short_name": "QuantumGuard",
+  "short_name": "QuantumShield",
   "description": "India's First AI Anti-APK Shield. Protect against cyber fraud, phishing, APK malware, ransomware, and data breaches.",
   "start_url": "/",
   "display": "standalone",
